--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.11.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-cssnano": "^2.1.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-uglify": "^1.5.1"
